Issues: Double username truncation width - fixes #620

--- a/github-dark.css
+++ b/github-dark.css
@@ -1816,6 +1816,10 @@
   table.files td.age .css-truncate {
     max-width: none !important;
   }
+  /* https://github.com/StylishThemes/GitHub-Dark/issues/620 */
+  .timeline-comment-header .css-truncate-target {
+    max-width: 250px !important;
+  }
   /* tooltip */
   .octotip {
     background-color: #003 !important;
